@@ -8,7 +8,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 
-;; $Id: fi-stream.el,v 1.18.6.1 2001/06/05 16:01:44 layer Exp $
+;; $Id: fi-stream.el,v 1.18.6.1.2.1 2002/02/12 23:43:37 layer Exp $
 ;;
 
 (defmacro fi::with-keywords (variables rest-arg &rest body)
@@ -50,12 +50,13 @@
 	    ((get-buffer-window buffer)
 	     (select-window (get-buffer-window buffer)))
 	    (splitp (split-window-vertically)))
-      (when (null no-select)
-	(switch-to-buffer buffer)
-	(fi::ensure-buffer-visible buffer)
-	;;(recenter 0)
-	)
-      (setf (second conf) buffer)
+      (when (get-buffer (buffer-name buffer))
+	(when (null no-select)
+	  (switch-to-buffer buffer)
+	  (fi::ensure-buffer-visible buffer)
+	  ;;(recenter 0)
+	  )
+	(setf (second conf) buffer))
       buffer)))
 
 (defun fi::create-new-mapped-screen-for-stream (parent x y width height)
