@@ -9,6 +9,13 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-release patch
 
+2002-02-12  Kevin Layer  <layer@crikey>
+
+	* fi-emacs19.el: from mikel: bug11469: more fixes for same bug
+	* fi-stream.el (lep::create-listener-stream): put in theoretical
+	fix for a problem that Ahmon might have seen.  The change seems
+	safe, in any case.
+
 2001-11-29  Kevin Layer  <layer@crikey>
 
 	* fi-basic-lep.el: fi::lep-debug is history, as it is now needed
@@ -19,8 +26,8 @@ post-release patch
 
 2001-11-14  Kevin Layer  <layer@crikey>
 
-	* fi-site-init.el: for emacs 21
-	* fi-emacs19.el: for emacs 21
+	* fi-site-init.el: bug11469: for emacs 21
+	* fi-emacs19.el: bug11469: for emacs 21
 
 2001-11-13  Kevin Layer  <layer@crikey>
 
